Add Card Recognizer Project

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "JS_Basis"]
 	path = JS_Basis
 	url = https://github.com/satorres8/JS_1.git
+[submodule "card-recognizer"]
+	path = card-recognizer
+	url = https://github.com/satorres8/CARD-RECOGNIZER.git
